Display books in flexbox

--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
-.testing {
-    font-size: 160px;
+* {
+    box-sizing: border-box;
+}
+
+.bookshelf {
+    font-size: 20px;
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.book {
+    border: 1px black solid;
+    padding: 2px;
+    flex: 1;
+    flex-basis: 250px;
+}
+
+.isRead {
+    background-color: aqua;
 }
